[tool.poetry]
name = "infra-orchestrator"
version = "1.0.0"
description = "Fabric-based orchestration for Terraform & S3 deployments"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fabric = "^3.2.2"
boto3 = "^1.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
